--- a/LikesProgram/LikesProgram.vcxproj.filters
+++ b/LikesProgram/LikesProgram.vcxproj.filters
@@ -93,16 +93,34 @@
     <ClCompile Include="src\LikesProgram\StringFormat\FormatInternal.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LikesProgram\server\EventLoop.cpp">
+    <ClCompile Include="src\LikesProgram\net\EventLoop.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LikesProgram\server\pollers\EpollPoller.cpp">
+    <ClCompile Include="src\LikesProgram\net\pollers\EpollPoller.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LikesProgram\server\pollers\WindowsSelectPoller.cpp">
+    <ClCompile Include="src\LikesProgram\net\pollers\WindowsSelectPoller.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\LikesProgram\server\Server.cpp">
+    <ClCompile Include="src\LikesProgram\net\Server.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\MainEventLoop.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\Transport.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\Connection.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\Poller.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\Channel.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LikesProgram\net\Buffer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
@@ -227,39 +245,50 @@
     <ClInclude Include="include\test\StringFormatTest.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Buffer.hpp">
+    <ClInclude Include="include\LikesProgram\net\Buffer.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Channel.hpp">
+    <ClInclude Include="include\LikesProgram\net\Channel.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Connection.hpp">
+    <ClInclude Include="include\LikesProgram\net\Connection.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\EventLoop.hpp">
+    <ClInclude Include="include\LikesProgram\net\EventLoop.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\IOEvent.hpp">
+    <ClInclude Include="include\LikesProgram\net\IOEvent.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Poller.hpp">
+    <ClInclude Include="include\LikesProgram\net\Poller.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\pollers\EpollPoller.hpp">
+    <ClInclude Include="include\LikesProgram\net\pollers\EpollPoller.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\pollers\WindowsSelectPoller.hpp">
+    <ClInclude Include="include\LikesProgram\net\pollers\WindowsSelectPoller.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Server.hpp">
+    <ClInclude Include="include\LikesProgram\net\Server.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\LikesProgram\server\Transport.hpp">
+    <ClInclude Include="include\LikesProgram\net\Transport.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LikesProgram\net\MainEventLoop.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\test\ServerTest.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LikesProgram\net\SocketType.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\LikesProgram\unicode\CreateUnicodeCaseMap.py" />
+    <None Include="include\test\ServerTest.py" />
+    <None Include="include\test\Test.py" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
